<resources>
    <string name="app_name">Semana09DPAFirebase</string>
    <string name="valbtnlogin">LOGIN</string>
    <string name="valbtnregister">REGISTER</string>
    <string name="valtxtemail">Email</string>
    <string name="valtxtPassword">Password</string>


    <string name="title_register">Register</string>

    <string name="valetfullname">Full Name</string>
    <string name="valetcountry">Country</string>
    <string name="valetemailregister">Email</string>
    <string name="valetpasswordregister">Password</string>
    <string name="valbtnsaveregister">SAVE</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Producto</string>
    <string name="menu_gallery">Cliente</string>
    <string name="menu_slideshow">Pokemon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_customer">REGISTER</string>
    <string name="valetfirstname">First name</string>
    <string name="valetlastname">Last name</string>
    <string name="valetphonenumber">Phone number</string>
    <string name="valbtnsearchpokemon">SEARCH</string>
</resources>